@@ -6,6 +6,7 @@
  - fix: cache download resource file size
  - fix: action button behavior in downloads panel (#94)
  - fix: action button behavior in uploads panel
+ - enh: add tool button for creating a collection in the "My Data" tab (#93)
  - enh: unify action button size, alignment, and spacing across all tabs
  - enh: allow sharing individual datasets instead of collections (#32)
  - enh: add preview option for dataset description in upload dialog (#52)
